Input Analysis result, Create study report working